--- a/contact.html
+++ b/contact.html
@@ -18,18 +18,18 @@
     <meta name="description" content="Get in touch with us for more information about our services.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/media/favicon.png">
-    <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/font-awesome.css">
-    <link rel="stylesheet" href="assets/css/vendor/slick.css">
-    <link rel="stylesheet" href="assets/css/vendor/slick-theme.css">
-    <link rel="stylesheet" href="assets/css/vendor/sal.css">
-    <link rel="stylesheet" href="assets/css/vendor/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/vendor/green-audio-player.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/odometer-theme-default.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+    <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="css/vendor/font-awesome.css">
+    <link rel="stylesheet" href="css/vendor/slick.css">
+    <link rel="stylesheet" href="css/vendor/slick-theme.css">
+    <link rel="stylesheet" href="css/vendor/sal.css">
+    <link rel="stylesheet" href="css/vendor/magnific-popup.css">
+    <link rel="stylesheet" href="css/vendor/green-audio-player.min.css">
+    <link rel="stylesheet" href="css/vendor/odometer-theme-default.css">
 
     <!-- Site Stylesheet -->
-    <link rel="stylesheet" href="assets/css/app.css">
+    <link rel="stylesheet" href="css/app.css">
 
 </head>
 <script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
@@ -76,9 +76,9 @@
                 <div class="container">
                     <div class="header-navbar">
                         <div class="header-logo">
-                            <a href="index.html"><img class="light-version-logo" src="assets/media/logo.png" alt="logo"></a>
-                            <a href="index.html"><img class="dark-version-logo" src="assets/media/logo-3.png" alt="logo"></a>
-                            <a href="index.html"><img class="sticky-logo" src="assets/media/logo-2.png" alt="logo"></a>
+                            <a href="index.html"><img class="light-version-logo" src="logo.png" alt="logo"></a>
+                            <a href="index.html"><img class="dark-version-logo" src="logo-3.png" alt="logo"></a>
+                            <a href="index.html"><img class="sticky-logo" src="logo-2.png" alt="logo"></a>
                         </div>
                         <div class="header-main-nav">
                             <!-- Start Mainmanu Nav -->
@@ -87,8 +87,8 @@
                                     <div class="mobile-nav-header">
                                         <div class="mobile-nav-logo">
                                             <a href="index.html">
-                                                <img class="light-mode" src="assets/media/logo-2.png" alt="Site Logo">
-                                                <img class="dark-mode" src="assets/media/logo-3.png" alt="Site Logo">
+                                                <img class="light-mode" src="logo-2.png" alt="Site Logo">
+                                                <img class="dark-mode" src="logo-3.png" alt="Site Logo">
                                             </a>
                                         </div>
                                         <button class="mobile-menu-close" data-bs-dismiss="offcanvas"><i class="fas fa-times"></i></button>
@@ -171,13 +171,13 @@
             </div>
             <ul class="shape-group-8 list-unstyled">
                 <li class="shape shape-1" data-sal="slide-right" data-sal-duration="500" data-sal-delay="100">
-                    <img src="assets/media/others/bubble-9.png" alt="Bubble">
+                    <img src="others/bubble-9.png" alt="Bubble">
                 </li>
                 <li class="shape shape-2" data-sal="slide-left" data-sal-duration="500" data-sal-delay="200">
-                    <img src="assets/media/others/bubble-17.png" alt="Bubble">
+                    <img src="others/bubble-17.png" alt="Bubble">
                 </li>
                 <li class="shape shape-3" data-sal="slide-up" data-sal-duration="500" data-sal-delay="300">
-                    <img src="assets/media/others/line-4.png" alt="Line">
+                    <img src="others/line-4.png" alt="Line">
                 </li>
             </ul>
         </div>
@@ -229,9 +229,9 @@
                 </div>
             </div>
             <ul class="list-unstyled shape-group-12">
-                <li class="shape shape-1"><img src="assets/media/others/bubble-2.png" alt="Bubble"></li>
-                <li class="shape shape-2"><img src="assets/media/others/bubble-1.png" alt="Bubble"></li>
-                <li class="shape shape-3"><img src="assets/media/others/circle-3.png" alt="Circle"></li>
+                <li class="shape shape-1"><img src="others/bubble-2.png" alt="Bubble"></li>
+                <li class="shape shape-2"><img src="others/bubble-1.png" alt="Bubble"></li>
+                <li class="shape shape-3"><img src="others/circle-3.png" alt="Circle"></li>
             </ul>
         </section>
 
@@ -346,24 +346,24 @@
     </div>
 
     <!-- Jquery Js -->
-    <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/vendor/bootstrap.min.js"></script>
-    <script src="assets/js/vendor/isotope.pkgd.min.js"></script>
-    <script src="assets/js/vendor/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/vendor/odometer.min.js"></script>
-    <script src="assets/js/vendor/jquery-appear.js"></script>
-    <script src="assets/js/vendor/slick.min.js"></script>
-    <script src="assets/js/vendor/sal.js"></script>
-    <script src="assets/js/vendor/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/vendor/js.cookie.js"></script>
-    <script src="assets/js/vendor/jquery.style.switcher.js"></script>
-    <script src="assets/js/vendor/jquery.countdown.min.js"></script>
-    <script src="assets/js/vendor/tilt.js"></script>
-    <script src="assets/js/vendor/green-audio-player.min.js"></script>
-    <script src="assets/js/vendor/jquery.nav.js"></script>
+    <script src="js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/vendor/isotope.pkgd.min.js"></script>
+    <script src="js/vendor/imagesloaded.pkgd.min.js"></script>
+    <script src="js/vendor/odometer.min.js"></script>
+    <script src="js/vendor/jquery-appear.js"></script>
+    <script src="js/vendor/slick.min.js"></script>
+    <script src="js/vendor/sal.js"></script>
+    <script src="js/vendor/jquery.magnific-popup.min.js"></script>
+    <script src="js/vendor/js.cookie.js"></script>
+    <script src="js/vendor/jquery.style.switcher.js"></script>
+    <script src="js/vendor/jquery.countdown.min.js"></script>
+    <script src="js/vendor/tilt.js"></script>
+    <script src="js/vendor/green-audio-player.min.js"></script>
+    <script src="js/vendor/jquery.nav.js"></script>
 
     <!-- Site Scripts -->
-    <script src="assets/js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 
