--- a/pricing-table.html
+++ b/pricing-table.html
@@ -19,18 +19,18 @@
     <meta name="description" content="Check out our affordable pricing rates.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/media/favicon.png">
-    <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/font-awesome.css">
-    <link rel="stylesheet" href="assets/css/vendor/slick.css">
-    <link rel="stylesheet" href="assets/css/vendor/slick-theme.css">
-    <link rel="stylesheet" href="assets/css/vendor/sal.css">
-    <link rel="stylesheet" href="assets/css/vendor/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/vendor/green-audio-player.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/odometer-theme-default.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+    <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="css/vendor/font-awesome.css">
+    <link rel="stylesheet" href="css/vendor/slick.css">
+    <link rel="stylesheet" href="css/vendor/slick-theme.css">
+    <link rel="stylesheet" href="css/vendor/sal.css">
+    <link rel="stylesheet" href="css/vendor/magnific-popup.css">
+    <link rel="stylesheet" href="css/vendor/green-audio-player.min.css">
+    <link rel="stylesheet" href="css/vendor/odometer-theme-default.css">
 
     <!-- Site Stylesheet -->
-    <link rel="stylesheet" href="assets/css/app.css">
+    <link rel="stylesheet" href="css/app.css">
 
 </head>
 <script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
@@ -77,9 +77,9 @@
                 <div class="container">
                     <div class="header-navbar">
                         <div class="header-logo">
-                            <a href="index.html"><img class="light-version-logo" src="assets/media/logo.png" alt="logo"></a>
-                            <a href="index.html"><img class="dark-version-logo" src="assets/media/logo-3.png" alt="logo"></a>
-                            <a href="index.html"><img class="sticky-logo" src="assets/media/logo-2.png" alt="logo"></a>
+                            <a href="index.html"><img class="light-version-logo" src="logo.png" alt="logo"></a>
+                            <a href="index.html"><img class="dark-version-logo" src="logo-3.png" alt="logo"></a>
+                            <a href="index.html"><img class="sticky-logo" src="logo-2.png" alt="logo"></a>
                         </div>
                         <div class="header-main-nav">
                             <!-- Start Mainmanu Nav -->
@@ -88,8 +88,8 @@
                                     <div class="mobile-nav-header">
                                         <div class="mobile-nav-logo">
                                             <a href="index.html">
-                                                <img class="light-mode" src="assets/media/logo-2.png" alt="Site Logo">
-                                                <img class="dark-mode" src="assets/media/logo-3.png" alt="Site Logo">
+                                                <img class="light-mode" src="logo-2.png" alt="Site Logo">
+                                                <img class="dark-mode" src="logo-3.png" alt="Site Logo">
                                             </a>
                                         </div>
                                         <button class="mobile-menu-close" data-bs-dismiss="offcanvas"><i class="fas fa-times"></i></button>
@@ -172,13 +172,13 @@
             </div>
             <ul class="shape-group-8 list-unstyled">
                 <li class="shape shape-1" data-sal="slide-right" data-sal-duration="500" data-sal-delay="100">
-                    <img src="assets/media/others/bubble-9.png" alt="Bubble">
+                    <img src="others/bubble-9.png" alt="Bubble">
                 </li>
                 <li class="shape shape-2" data-sal="slide-left" data-sal-duration="500" data-sal-delay="200">
-                    <img src="assets/media/others/bubble-11.png" alt="Bubble">
+                    <img src="others/bubble-11.png" alt="Bubble">
                 </li>
                 <li class="shape shape-3" data-sal="slide-up" data-sal-duration="500" data-sal-delay="300">
-                    <img src="assets/media/others/line-4.png" alt="Line">
+                    <img src="others/line-4.png" alt="Line">
                 </li>
             </ul>
         </div>
@@ -305,8 +305,8 @@
                 </div>
             </div>
             <ul class="shape-group-3 list-unstyled">
-                <li class="shape shape-1"><img src="assets/media/others/line-1.png" alt="shape"></li>
-                <li class="shape shape-2"><img src="assets/media/others/bubble-4.png" alt="shape"></li>
+                <li class="shape shape-1"><img src="others/line-1.png" alt="shape"></li>
+                <li class="shape shape-2"><img src="others/bubble-4.png" alt="shape"></li>
             </ul>
         </section>
         <!--=====================================-->
@@ -408,9 +408,9 @@
                 </div>
             </div>
             <ul class="shape-group-6 list-unstyled">
-                <li class="shape shape-1" data-sal="slide-right" data-sal-duration="800" data-sal-delay="100"><img src="assets/media/others/bubble-7.png" alt="Bubble"></li>
-                <li class="shape shape-2" data-sal="slide-down" data-sal-duration="800" data-sal-delay="100"><img src="assets/media/others/line-4.png" alt="line"></li>
-                <li class="shape shape-4" data-sal="slide-right" data-sal-duration="800" data-sal-delay="100"><img src="assets/media/others/poses-lady.png" alt="Poses"></li>
+                <li class="shape shape-1" data-sal="slide-right" data-sal-duration="800" data-sal-delay="100"><img src="others/bubble-7.png" alt="Bubble"></li>
+                <li class="shape shape-2" data-sal="slide-down" data-sal-duration="800" data-sal-delay="100"><img src="others/line-4.png" alt="line"></li>
+                <li class="shape shape-4" data-sal="slide-right" data-sal-duration="800" data-sal-delay="100"><img src="others/poses-lady.png" alt="Poses"></li>
             </ul>
         </section>
         <!--=====================================-->
@@ -426,27 +426,27 @@
                     </div>
                     <div class="thumbnail">
                         <div class="larg-thumb" data-sal="zoom-in" data-sal-duration="600" data-sal-delay="100">
-                            <img class="paralax-image" src="assets/media/others/chat-group.png" alt="Chat">
+                            <img class="paralax-image" src="others/chat-group.png" alt="Chat">
                         </div>
                         <ul class="list-unstyled small-thumb">
                             <li class="shape shape-1" data-sal="slide-right" data-sal-duration="800" data-sal-delay="400">
-                                <img class="paralax-image" src="assets/media/others/laptop-poses.png" alt="Laptop">
+                                <img class="paralax-image" src="others/laptop-poses.png" alt="Laptop">
                             </li>
                             <li class="shape shape-2" data-sal="slide-left" data-sal-duration="800" data-sal-delay="300">
-                                <img class="paralax-image" src="assets/media/others/bill-pay.png" alt="Bill">
+                                <img class="paralax-image" src="others/bill-pay.png" alt="Bill">
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
             <ul class="list-unstyled shape-group-9">
-                <li class="shape shape-1"><img src="assets/media/others/bubble-12.png" alt="Comments"></li>
-                <li class="shape shape-2"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
-                <li class="shape shape-3"><img src="assets/media/others/bubble-13.png" alt="Comments"></li>
-                <li class="shape shape-4"><img src="assets/media/others/bubble-14.png" alt="Comments"></li>
-                <li class="shape shape-5"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
-                <li class="shape shape-6"><img src="assets/media/others/bubble-15.png" alt="Comments"></li>
-                <li class="shape shape-7"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
+                <li class="shape shape-1"><img src="others/bubble-12.png" alt="Comments"></li>
+                <li class="shape shape-2"><img src="others/bubble-16.png" alt="Comments"></li>
+                <li class="shape shape-3"><img src="others/bubble-13.png" alt="Comments"></li>
+                <li class="shape shape-4"><img src="others/bubble-14.png" alt="Comments"></li>
+                <li class="shape shape-5"><img src="others/bubble-16.png" alt="Comments"></li>
+                <li class="shape shape-6"><img src="others/bubble-15.png" alt="Comments"></li>
+                <li class="shape shape-7"><img src="others/bubble-16.png" alt="Comments"></li>
             </ul>
         </section>
         <!--=====================================-->
@@ -556,24 +556,24 @@
     </div>
 
     <!-- Jquery Js -->
-    <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/vendor/bootstrap.min.js"></script>
-    <script src="assets/js/vendor/isotope.pkgd.min.js"></script>
-    <script src="assets/js/vendor/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/vendor/odometer.min.js"></script>
-    <script src="assets/js/vendor/jquery-appear.js"></script>
-    <script src="assets/js/vendor/slick.min.js"></script>
-    <script src="assets/js/vendor/sal.js"></script>
-    <script src="assets/js/vendor/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/vendor/js.cookie.js"></script>
-    <script src="assets/js/vendor/jquery.style.switcher.js"></script>
-    <script src="assets/js/vendor/jquery.countdown.min.js"></script>
-    <script src="assets/js/vendor/tilt.js"></script>
-    <script src="assets/js/vendor/green-audio-player.min.js"></script>
-    <script src="assets/js/vendor/jquery.nav.js"></script>
+    <script src="js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/vendor/isotope.pkgd.min.js"></script>
+    <script src="js/vendor/imagesloaded.pkgd.min.js"></script>
+    <script src="js/vendor/odometer.min.js"></script>
+    <script src="js/vendor/jquery-appear.js"></script>
+    <script src="js/vendor/slick.min.js"></script>
+    <script src="js/vendor/sal.js"></script>
+    <script src="js/vendor/jquery.magnific-popup.min.js"></script>
+    <script src="js/vendor/js.cookie.js"></script>
+    <script src="js/vendor/jquery.style.switcher.js"></script>
+    <script src="js/vendor/jquery.countdown.min.js"></script>
+    <script src="js/vendor/tilt.js"></script>
+    <script src="js/vendor/green-audio-player.min.js"></script>
+    <script src="js/vendor/jquery.nav.js"></script>
 
     <!-- Site Scripts -->
-    <script src="assets/js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 
