--- a/about-us.html
+++ b/about-us.html
@@ -20,18 +20,18 @@
                              Design, and Marketing.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/media/favicon.png">
-    <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/font-awesome.css">
-    <link rel="stylesheet" href="assets/css/vendor/slick.css">
-    <link rel="stylesheet" href="assets/css/vendor/slick-theme.css">
-    <link rel="stylesheet" href="assets/css/vendor/sal.css">
-    <link rel="stylesheet" href="assets/css/vendor/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/vendor/green-audio-player.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/odometer-theme-default.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+    <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="css/vendor/font-awesome.css">
+    <link rel="stylesheet" href="css/vendor/slick.css">
+    <link rel="stylesheet" href="css/vendor/slick-theme.css">
+    <link rel="stylesheet" href="css/vendor/sal.css">
+    <link rel="stylesheet" href="css/vendor/magnific-popup.css">
+    <link rel="stylesheet" href="css/vendor/green-audio-player.min.css">
+    <link rel="stylesheet" href="css/vendor/odometer-theme-default.css">
 
     <!-- Site Stylesheet -->
-    <link rel="stylesheet" href="assets/css/app.css">
+    <link rel="stylesheet" href="css/app.css">
 
 </head>
 <script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
@@ -78,9 +78,9 @@
                 <div class="container">
                     <div class="header-navbar">
                         <div class="header-logo">
-                            <a href="index.html"><img class="light-version-logo" src="assets/media/logo.png" alt="logo"></a>
-                            <a href="index.html"><img class="dark-version-logo" src="assets/media/logo-3.png" alt="logo"></a>
-                            <a href="index.html"><img class="sticky-logo" src="assets/media/logo-2.png" alt="logo"></a>
+                            <a href="index.html"><img class="light-version-logo" src="logo.png" alt="logo"></a>
+                            <a href="index.html"><img class="dark-version-logo" src="logo-3.png" alt="logo"></a>
+                            <a href="index.html"><img class="sticky-logo" src="logo-2.png" alt="logo"></a>
                         </div>
                         <div class="header-main-nav">
                             <!-- Start Mainmanu Nav -->
@@ -89,8 +89,8 @@
                                     <div class="mobile-nav-header">
                                         <div class="mobile-nav-logo">
                                             <a href="index.html">
-                                                <img class="light-mode" src="assets/media/logo-2.png" alt="Site Logo">
-                                                <img class="dark-mode" src="assets/media/logo-3.png" alt="Site Logo">
+                                                <img class="light-mode" src="logo-2.png" alt="Site Logo">
+                                                <img class="dark-mode" src="logo-3.png" alt="Site Logo">
                                             </a>
                                         </div>
                                         <button class="mobile-menu-close" data-bs-dismiss="offcanvas"><i class="fas fa-times"></i></button>
@@ -168,18 +168,18 @@
                     <p>We're a leading Digital agency with a focus on Web Development, Branding, Design, and Marketing.</p>
                 </div>
                 <div class="banner-thumbnail thumbnail-4" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="400">
-                    <img src="assets/media/banner/banner-thumb-3.png" alt="Illustration">
+                    <img src="banner/banner-thumb-3.png" alt="Illustration">
                 </div>
             </div>
             <ul class="shape-group-8 list-unstyled">
                 <li class="shape shape-1" data-sal="slide-right" data-sal-duration="500" data-sal-delay="100">
-                    <img src="assets/media/others/bubble-9.png" alt="Bubble">
+                    <img src="others/bubble-9.png" alt="Bubble">
                 </li>
                 <li class="shape shape-2" data-sal="slide-left" data-sal-duration="500" data-sal-delay="200">
-                    <img src="assets/media/others/bubble-22.png" alt="Bubble">
+                    <img src="others/bubble-22.png" alt="Bubble">
                 </li>
                 <li class="shape shape-3" data-sal="slide-up" data-sal-duration="500" data-sal-delay="300">
-                    <img src="assets/media/others/line-4.png" alt="Line">
+                    <img src="others/line-4.png" alt="Line">
                 </li>
             </ul>
         </div>
@@ -191,7 +191,7 @@
                 <div class="row">
                     <div class="col-xl-7 col-lg-6">
                         <div class="case-study-featured-thumb text-start">
-                            <img src="assets/media/others/case-study-4.png" alt="travel">
+                            <img src="others/case-study-4.png" alt="travel">
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-6">
@@ -274,9 +274,9 @@ So, why is Seytech the right digital agency for you? Let’s find out!</p>
                 </div>
             </div>
             <ul class="list-unstyled shape-group-10">
-                <li class="shape shape-1"><img src="assets/media/others/circle-1.png" alt="Circle"></li>
-                <li class="shape shape-2"><img src="assets/media/others/line-3.png" alt="Circle"></li>
-                <li class="shape shape-3"><img src="assets/media/others/bubble-5.png" alt="Circle"></li>
+                <li class="shape shape-1"><img src="others/circle-1.png" alt="Circle"></li>
+                <li class="shape shape-2"><img src="others/line-3.png" alt="Circle"></li>
+                <li class="shape shape-3"><img src="others/bubble-5.png" alt="Circle"></li>
             </ul>
         </section>
         <!--=====================================-->
@@ -295,7 +295,7 @@ So, why is Seytech the right digital agency for you? Let’s find out!</p>
                 </div>
                 <div class="process-work" data-sal="slide-right" data-sal-duration="1000" data-sal-delay="100">
                     <div class="thumbnail paralax-image">
-                        <img src="assets/media/others/process-1.png" alt="Thumbnail">
+                        <img src="others/process-1.png" alt="Thumbnail">
                     </div>
                     <div class="content">
                         <span class="subtitle">Step One</span>
@@ -307,7 +307,7 @@ So, why is Seytech the right digital agency for you? Let’s find out!</p>
                 </div>
                 <div class="process-work content-reverse" data-sal="slide-left" data-sal-duration="1000" data-sal-delay="100">
                     <div class="thumbnail paralax-image">
-                        <img src="assets/media/others/process-2.png" alt="Thumbnail">
+                        <img src="others/process-2.png" alt="Thumbnail">
                     </div>
                     <div class="content">
                         <span class="subtitle">Step Two</span>
@@ -317,7 +317,7 @@ So, why is Seytech the right digital agency for you? Let’s find out!</p>
                 </div>
                 <div class="process-work" data-sal="slide-right" data-sal-duration="1000" data-sal-delay="100">
                     <div class="thumbnail paralax-image">
-                        <img src="assets/media/others/process-3.png" alt="Thumbnail">
+                        <img src="others/process-3.png" alt="Thumbnail">
                     </div>
                     <div class="content">
                         <span class="subtitle">Step Three</span>
@@ -327,7 +327,7 @@ So, why is Seytech the right digital agency for you? Let’s find out!</p>
                 </div>
                 <div class="process-work content-reverse" data-sal="slide-left" data-sal-duration="1000" data-sal-delay="100">
                     <div class="thumbnail paralax-image">
-                        <img src="assets/media/others/process-4.png" alt="Thumbnail">
+                        <img src="others/process-4.png" alt="Thumbnail">
                     </div>
                     <div class="content">
                         <span class="subtitle">Step four</span>
@@ -337,7 +337,7 @@ So, why is Seytech the right digital agency for you? Let’s find out!</p>
                 </div>
                 <div class="process-work" data-sal="slide-right" data-sal-duration="1000" data-sal-delay="100">
                     <div class="thumbnail paralax-image">
-                        <img src="assets/media/others/process-1.png" alt="Thumbnail">
+                        <img src="others/process-1.png" alt="Thumbnail">
                     </div>
                     <div class="content">
                         <span class="subtitle">Step five</span>
@@ -347,7 +347,7 @@ So, why is Seytech the right digital agency for you? Let’s find out!</p>
                 </div>
                 <div class="process-work content-reverse" data-sal="slide-left" data-sal-duration="1000" data-sal-delay="100">
                     <div class="thumbnail paralax-image">
-                        <img src="assets/media/others/process-2.png" alt="Thumbnail">
+                        <img src="others/process-2.png" alt="Thumbnail">
                     </div>
                     <div class="content">
                         <span class="subtitle">Step six</span>
@@ -358,12 +358,12 @@ So, why is Seytech the right digital agency for you? Let’s find out!</p>
 
             </div>
             <ul class="shape-group-17 list-unstyled">
-                <li class="shape shape-1"><img src="assets/media/others/bubble-24.png" alt="Bubble"></li>
-                <li class="shape shape-2"><img src="assets/media/others/bubble-23.png" alt="Bubble"></li>
-                <li class="shape shape-3"><img src="assets/media/others/line-4.png" alt="Line"></li>
-                <li class="shape shape-4"><img src="assets/media/others/line-5.png" alt="Line"></li>
-                <li class="shape shape-5"><img src="assets/media/others/line-4.png" alt="Line"></li>
-                <li class="shape shape-6"><img src="assets/media/others/line-5.png" alt="Line"></li>
+                <li class="shape shape-1"><img src="others/bubble-24.png" alt="Bubble"></li>
+                <li class="shape shape-2"><img src="others/bubble-23.png" alt="Bubble"></li>
+                <li class="shape shape-3"><img src="others/line-4.png" alt="Line"></li>
+                <li class="shape shape-4"><img src="others/line-5.png" alt="Line"></li>
+                <li class="shape shape-5"><img src="others/line-4.png" alt="Line"></li>
+                <li class="shape shape-6"><img src="others/line-5.png" alt="Line"></li>
             </ul>
         </section>
         <!--=====================================-->
@@ -379,27 +379,27 @@ So, why is Seytech the right digital agency for you? Let’s find out!</p>
                     </div>
                     <div class="thumbnail">
                         <div class="larg-thumb" data-sal="zoom-in" data-sal-duration="600" data-sal-delay="100">
-                            <img class="paralax-image" src="assets/media/others/chat-group.png" alt="Chat">
+                            <img class="paralax-image" src="others/chat-group.png" alt="Chat">
                         </div>
                         <ul class="list-unstyled small-thumb">
                             <li class="shape shape-1" data-sal="slide-right" data-sal-duration="800" data-sal-delay="400">
-                                <img class="paralax-image" src="assets/media/others/laptop-poses.png" alt="Laptop">
+                                <img class="paralax-image" src="others/laptop-poses.png" alt="Laptop">
                             </li>
                             <li class="shape shape-2" data-sal="slide-left" data-sal-duration="800" data-sal-delay="300">
-                                <img class="paralax-image" src="assets/media/others/bill-pay.png" alt="Bill">
+                                <img class="paralax-image" src="others/bill-pay.png" alt="Bill">
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
             <ul class="list-unstyled shape-group-9">
-                <li class="shape shape-1"><img src="assets/media/others/bubble-12.png" alt="Comments"></li>
-                <li class="shape shape-2"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
-                <li class="shape shape-3"><img src="assets/media/others/bubble-13.png" alt="Comments"></li>
-                <li class="shape shape-4"><img src="assets/media/others/bubble-14.png" alt="Comments"></li>
-                <li class="shape shape-5"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
-                <li class="shape shape-6"><img src="assets/media/others/bubble-15.png" alt="Comments"></li>
-                <li class="shape shape-7"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
+                <li class="shape shape-1"><img src="others/bubble-12.png" alt="Comments"></li>
+                <li class="shape shape-2"><img src="others/bubble-16.png" alt="Comments"></li>
+                <li class="shape shape-3"><img src="others/bubble-13.png" alt="Comments"></li>
+                <li class="shape shape-4"><img src="others/bubble-14.png" alt="Comments"></li>
+                <li class="shape shape-5"><img src="others/bubble-16.png" alt="Comments"></li>
+                <li class="shape shape-6"><img src="others/bubble-15.png" alt="Comments"></li>
+                <li class="shape shape-7"><img src="others/bubble-16.png" alt="Comments"></li>
             </ul>
         </section>
         <!--=====================================-->
@@ -509,24 +509,24 @@ So, why is Seytech the right digital agency for you? Let’s find out!</p>
     </div>
 
     <!-- Jquery Js -->
-    <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/vendor/bootstrap.min.js"></script>
-    <script src="assets/js/vendor/isotope.pkgd.min.js"></script>
-    <script src="assets/js/vendor/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/vendor/odometer.min.js"></script>
-    <script src="assets/js/vendor/jquery-appear.js"></script>
-    <script src="assets/js/vendor/slick.min.js"></script>
-    <script src="assets/js/vendor/sal.js"></script>
-    <script src="assets/js/vendor/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/vendor/js.cookie.js"></script>
-    <script src="assets/js/vendor/jquery.style.switcher.js"></script>
-    <script src="assets/js/vendor/jquery.countdown.min.js"></script>
-    <script src="assets/js/vendor/tilt.js"></script>
-    <script src="assets/js/vendor/green-audio-player.min.js"></script>
-    <script src="assets/js/vendor/jquery.nav.js"></script>
+    <script src="js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/vendor/isotope.pkgd.min.js"></script>
+    <script src="js/vendor/imagesloaded.pkgd.min.js"></script>
+    <script src="js/vendor/odometer.min.js"></script>
+    <script src="js/vendor/jquery-appear.js"></script>
+    <script src="js/vendor/slick.min.js"></script>
+    <script src="js/vendor/sal.js"></script>
+    <script src="js/vendor/jquery.magnific-popup.min.js"></script>
+    <script src="js/vendor/js.cookie.js"></script>
+    <script src="js/vendor/jquery.style.switcher.js"></script>
+    <script src="js/vendor/jquery.countdown.min.js"></script>
+    <script src="js/vendor/tilt.js"></script>
+    <script src="js/vendor/green-audio-player.min.js"></script>
+    <script src="js/vendor/jquery.nav.js"></script>
 
     <!-- Site Scripts -->
-    <script src="assets/js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 
