--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -20,18 +20,18 @@
     Web designs, Logo and Branding.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/media/favicon.png">
-    <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/font-awesome.css">
-    <link rel="stylesheet" href="assets/css/vendor/slick.css">
-    <link rel="stylesheet" href="assets/css/vendor/slick-theme.css">
-    <link rel="stylesheet" href="assets/css/vendor/sal.css">
-    <link rel="stylesheet" href="assets/css/vendor/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/vendor/green-audio-player.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/odometer-theme-default.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+    <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="css/vendor/font-awesome.css">
+    <link rel="stylesheet" href="css/vendor/slick.css">
+    <link rel="stylesheet" href="css/vendor/slick-theme.css">
+    <link rel="stylesheet" href="css/vendor/sal.css">
+    <link rel="stylesheet" href="css/vendor/magnific-popup.css">
+    <link rel="stylesheet" href="css/vendor/green-audio-player.min.css">
+    <link rel="stylesheet" href="css/vendor/odometer-theme-default.css">
 
     <!-- Site Stylesheet -->
-    <link rel="stylesheet" href="assets/css/app.css">
+    <link rel="stylesheet" href="css/app.css">
 
 </head>
 <script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
@@ -78,9 +78,9 @@
                 <div class="container">
                     <div class="header-navbar">
                         <div class="header-logo">
-                            <a href="index.html"><img class="light-version-logo" src="assets/media/logo.png" alt="logo"></a>
-                            <a href="index.html"><img class="dark-version-logo" src="assets/media/logo-3.png" alt="logo"></a>
-                            <a href="index.html"><img class="sticky-logo" src="assets/media/logo-2.png" alt="logo"></a>
+                            <a href="index.html"><img class="light-version-logo" src="logo.png" alt="logo"></a>
+                            <a href="index.html"><img class="dark-version-logo" src="logo-3.png" alt="logo"></a>
+                            <a href="index.html"><img class="sticky-logo" src="logo-2.png" alt="logo"></a>
                         </div>
                         <div class="header-main-nav">
                             <!-- Start Mainmanu Nav -->
@@ -89,8 +89,8 @@
                                     <div class="mobile-nav-header">
                                         <div class="mobile-nav-logo">
                                             <a href="index.html">
-                                                <img class="light-mode" src="assets/media/logo-2.png" alt="Site Logo">
-                                                <img class="dark-mode" src="assets/media/logo-3.png" alt="Site Logo">
+                                                <img class="light-mode" src="logo-2.png" alt="Site Logo">
+                                                <img class="dark-mode" src="logo-3.png" alt="Site Logo">
                                             </a>
                                         </div>
                                         <button class="mobile-menu-close" data-bs-dismiss="offcanvas"><i class="fas fa-times"></i></button>
@@ -168,18 +168,18 @@
                     <p>A quick view of industry specific problems solved with design by the awesome team at Seytech.</p>
                 </div>
                 <div class="banner-thumbnail" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="400">
-                    <img class="paralax-image" src="assets/media/banner/banner-thumb-1.png" alt="Illustration">
+                    <img class="paralax-image" src="banner/banner-thumb-1.png" alt="Illustration">
                 </div>
             </div>
             <ul class="shape-group-8 list-unstyled">
                 <li class="shape shape-1" data-sal="slide-right" data-sal-duration="500" data-sal-delay="100">
-                    <img src="assets/media/others/bubble-9.png" alt="Bubble">
+                    <img src="others/bubble-9.png" alt="Bubble">
                 </li>
                 <li class="shape shape-2" data-sal="slide-left" data-sal-duration="500" data-sal-delay="200">
-                    <img src="assets/media/others/bubble-20.png" alt="Bubble">
+                    <img src="others/bubble-20.png" alt="Bubble">
                 </li>
                 <li class="shape shape-3" data-sal="slide-up" data-sal-duration="500" data-sal-delay="300">
-                    <img src="assets/media/others/line-4.png" alt="Line">
+                    <img src="others/line-4.png" alt="Line">
                 </li>
             </ul>
         </div>
@@ -203,7 +203,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="https://drikko.netlify.app/">
-                                        <img src="assets/media/project/project-1.png" alt="project">
+                                        <img src="project/project-1.png" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -216,7 +216,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-2.png" alt="project">
+                                        <img src="project/project-2.png" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -229,7 +229,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-3.jpg" alt="project">
+                                        <img src="project/project-3.jpg" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -242,7 +242,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-4.jpg" alt="project">
+                                        <img src="project/project-4.jpg" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -255,7 +255,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-5.png" alt="project">
+                                        <img src="project/project-5.png" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -268,7 +268,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-6.png" alt="project">
+                                        <img src="project/project-6.png" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -281,7 +281,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-7.jpg" alt="project">
+                                        <img src="project/project-7.jpg" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -294,7 +294,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-8.jpg" alt="project">
+                                        <img src="project/project-8.jpg" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -307,7 +307,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-9.png" alt="project">
+                                        <img src="project/project-9.png" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -320,7 +320,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-10.png" alt="project">
+                                        <img src="project/project-10.png" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -333,7 +333,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-11.jpg" alt="project">
+                                        <img src="project/project-11.jpg" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -346,7 +346,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-12.jpg" alt="project">
+                                        <img src="project/project-12.jpg" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -359,7 +359,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-13.png" alt="project">
+                                        <img src="project/project-13.png" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -372,7 +372,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-14.png" alt="project">
+                                        <img src="project/project-14.png" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -385,7 +385,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-15.jpg" alt="project">
+                                        <img src="project/project-15.jpg" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -398,7 +398,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="assets/media/project/project-16.jpg" alt="project">
+                                        <img src="project/project-16.jpg" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -414,9 +414,9 @@
                 </div>
             </div>
             <ul class="shape-group-7 list-unstyled">
-                <li class="shape shape-1"><img src="assets/media/others/circle-2.png" alt="circle"></li>
-                <li class="shape shape-2"><img src="assets/media/others/bubble-2.png" alt="Line"></li>
-                <li class="shape shape-3"><img src="assets/media/others/bubble-1.png" alt="Line"></li>
+                <li class="shape shape-1"><img src="others/circle-2.png" alt="circle"></li>
+                <li class="shape shape-2"><img src="others/bubble-2.png" alt="Line"></li>
+                <li class="shape shape-3"><img src="others/bubble-1.png" alt="Line"></li>
             </ul>
         </section>
         <!--=====================================-->
@@ -432,27 +432,27 @@
                     </div>
                     <div class="thumbnail">
                         <div class="larg-thumb" data-sal="zoom-in" data-sal-duration="600" data-sal-delay="100">
-                            <img class="paralax-image" src="assets/media/others/chat-group.png" alt="Chat">
+                            <img class="paralax-image" src="others/chat-group.png" alt="Chat">
                         </div>
                         <ul class="list-unstyled small-thumb">
                             <li class="shape shape-1" data-sal="slide-right" data-sal-duration="800" data-sal-delay="400">
-                                <img class="paralax-image" src="assets/media/others/laptop-poses.png" alt="Laptop">
+                                <img class="paralax-image" src="others/laptop-poses.png" alt="Laptop">
                             </li>
                             <li class="shape shape-2" data-sal="slide-left" data-sal-duration="800" data-sal-delay="300">
-                                <img class="paralax-image" src="assets/media/others/bill-pay.png" alt="Bill">
+                                <img class="paralax-image" src="others/bill-pay.png" alt="Bill">
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
             <ul class="list-unstyled shape-group-9">
-                <li class="shape shape-1"><img src="assets/media/others/bubble-12.png" alt="Comments"></li>
-                <li class="shape shape-2"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
-                <li class="shape shape-3"><img src="assets/media/others/bubble-13.png" alt="Comments"></li>
-                <li class="shape shape-4"><img src="assets/media/others/bubble-14.png" alt="Comments"></li>
-                <li class="shape shape-5"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
-                <li class="shape shape-6"><img src="assets/media/others/bubble-15.png" alt="Comments"></li>
-                <li class="shape shape-7"><img src="assets/media/others/bubble-16.png" alt="Comments"></li>
+                <li class="shape shape-1"><img src="others/bubble-12.png" alt="Comments"></li>
+                <li class="shape shape-2"><img src="others/bubble-16.png" alt="Comments"></li>
+                <li class="shape shape-3"><img src="others/bubble-13.png" alt="Comments"></li>
+                <li class="shape shape-4"><img src="others/bubble-14.png" alt="Comments"></li>
+                <li class="shape shape-5"><img src="others/bubble-16.png" alt="Comments"></li>
+                <li class="shape shape-6"><img src="others/bubble-15.png" alt="Comments"></li>
+                <li class="shape shape-7"><img src="others/bubble-16.png" alt="Comments"></li>
             </ul>
         </section>
         <!--=====================================-->
@@ -562,24 +562,24 @@
     </div>
 
     <!-- Jquery Js -->
-    <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/vendor/bootstrap.min.js"></script>
-    <script src="assets/js/vendor/isotope.pkgd.min.js"></script>
-    <script src="assets/js/vendor/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/vendor/odometer.min.js"></script>
-    <script src="assets/js/vendor/jquery-appear.js"></script>
-    <script src="assets/js/vendor/slick.min.js"></script>
-    <script src="assets/js/vendor/sal.js"></script>
-    <script src="assets/js/vendor/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/vendor/js.cookie.js"></script>
-    <script src="assets/js/vendor/jquery.style.switcher.js"></script>
-    <script src="assets/js/vendor/jquery.countdown.min.js"></script>
-    <script src="assets/js/vendor/tilt.js"></script>
-    <script src="assets/js/vendor/green-audio-player.min.js"></script>
-    <script src="assets/js/vendor/jquery.nav.js"></script>
+    <script src="js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/vendor/isotope.pkgd.min.js"></script>
+    <script src="js/vendor/imagesloaded.pkgd.min.js"></script>
+    <script src="js/vendor/odometer.min.js"></script>
+    <script src="js/vendor/jquery-appear.js"></script>
+    <script src="js/vendor/slick.min.js"></script>
+    <script src="js/vendor/sal.js"></script>
+    <script src="js/vendor/jquery.magnific-popup.min.js"></script>
+    <script src="js/vendor/js.cookie.js"></script>
+    <script src="js/vendor/jquery.style.switcher.js"></script>
+    <script src="js/vendor/jquery.countdown.min.js"></script>
+    <script src="js/vendor/tilt.js"></script>
+    <script src="js/vendor/green-audio-player.min.js"></script>
+    <script src="js/vendor/jquery.nav.js"></script>
 
     <!-- Site Scripts -->
-    <script src="assets/js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 
