--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ and Social Media services in Lagos, Nigeria. ">
                             <div class="project-grid">
                                 <div class="thumbnail">
                                    
-                                        <img src="project/project-3.jpg" alt="project">
+                                        <img src="project/project-3.JPG" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -456,7 +456,7 @@ and Social Media services in Lagos, Nigeria. ">
                             <div class="project-grid">
                                 <div class="thumbnail">
                                    
-                                        <img src="project/project-4.jpg" alt="project">
+                                        <img src="project/project-4.JPG" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
