--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -229,7 +229,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="project/project-3.jpg" alt="project">
+                                        <img src="project/project-3.JPG" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -242,7 +242,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="project/project-4.jpg" alt="project">
+                                        <img src="project/project-4.JPG" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -281,7 +281,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="project/project-7.jpg" alt="project">
+                                        <img src="project/project-7.JPG" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -294,7 +294,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="project/project-8.jpg" alt="project">
+                                        <img src="project/project-8.JPG" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -333,7 +333,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="project/project-11.jpg" alt="project">
+                                        <img src="project/project-11.JPG" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -346,7 +346,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="project/project-12.jpg" alt="project">
+                                        <img src="project/project-12.JPG" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -385,7 +385,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="project/project-15.jpg" alt="project">
+                                        <img src="project/project-15.JPG" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
@@ -398,7 +398,7 @@
                             <div class="project-grid">
                                 <div class="thumbnail">
                                     <a href="javascript:void(0)">
-                                        <img src="project/project-16.jpg" alt="project">
+                                        <img src="project/project-16.JPG" alt="project">
                                     </a>
                                 </div>
                                 <div class="content">
