--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ and Social Media services in Lagos, Nigeria. ">
                     <div class="col-xl-5 col-lg-6 offset-xl-1" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                         <div class="contact-form-box">
                             <h3 class="title">Get a free Seytech quote now</h3>
-                            <form method="POST" action="#" class="axil-contact-form">
+                            <form method="POST" action="https://formspree.io/f/xjvzozgp" class="axil-contact-form" id="my-form">
                                 <div class="form-group">
                                     <label>Name</label>
                                     <input type="text" class="form-control" name="contact-name" placeholder="John Smith">
@@ -381,10 +381,10 @@ and Social Media services in Lagos, Nigeria. ">
                                     <label>Phone</label>
                                     <input type="tel" class="form-control" name="contact-company" placeholder="+123456789">
                                 </div>
-                                <div class="form-group">
-                                    <button type="submit" class="axil-btn btn-fill-primary btn-fluid btn-primary" name="submit-btn">Get Free Quote</button>
+                                 <div class="form-group">
+                                    <input type="submit" value="Get Free Quote" class="axil-btn btn-fill-primary btn-fluid btn-primary" name="submit-btn"></input>
                                 </div>
-                                <input type="hidden" class="form-control" name="contact-message" value="Null">
+                                 <div id="status"></div>
                             </form>
                         </div>
                     </div>
@@ -977,6 +977,7 @@ and Social Media services in Lagos, Nigeria. ">
 
     <!-- Site Scripts -->
     <script src="js/app.js"></script>
+    <script src="js/contact.js"></script>
 </body>
 
 
