--- a/contact.html
+++ b/contact.html
@@ -189,8 +189,8 @@
                 <div class="row">
                     <div class="col-xl-5 col-lg-6">
                         <div class="contact-form-box shadow-box mb--30">
-                            <h3 class="title">Get a free Seytech quote now</h3>
-                            <form method="POST" action="#" class="axil-contact-form">
+                         <h3 class="title">Get a free Seytech quote now</h3>
+                            <form action="https://formspree.io/f/xjvzozgp" method="POST"  class="axil-contact-form" id="my-form">
                                 <div class="form-group">
                                     <label>Name</label>
                                     <input type="text" class="form-control" name="contact-name">
@@ -198,6 +198,10 @@
                                 <div class="form-group">
                                     <label>Email</label>
                                     <input type="email" class="form-control" name="contact-email">
+                                </div>
+                                <div class="form-group">
+                                    <label>Phone</label>
+                                    <input type="tel" class="form-control" name="contact-company">
                                 </div>
                                 <div class="form-group">
                                     <label>Company</label>
@@ -208,21 +212,22 @@
                                     <textarea name="contact-message" id="contact-message" class="form-control textarea" cols="30" rows="4"></textarea>
                                 </div>
                                 <div class="form-group">
-                                    <button type="submit" class="axil-btn btn-fill-primary btn-fluid btn-primary" name="submit-btn">Get Pricing Now</button>
+                                    <input type="submit" value="Get Pricing Now" class="axil-btn btn-fill-primary btn-fluid btn-primary" name="submit-btn"></input>
                                 </div>
+                                 <div id="status"></div>
                             </form>
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-6 offset-xl-1">
                         <div class="contact-info mb--100 mb_md--30 mt_md--0 mt--150">
                             <h4 class="title">Phone</h4>
-                            <p>Our customer care is open from Monday - Friday<br> 10:00 am to 6:00 pm</p>
-                            <h4 class="phone-number" style="font-size: 25px;"><a href="tel:+2349061844601">(+234) 906 1844 601</a></h4>
+                            <p>Our customer care is open from Monday - Friday<br> 9:00 am to 6:00 pm</p>
+                            <h4 class="phone-number" style="font-size: 25px;"><a href="tel:+2349097722335">(+234) 909 7722 335</a></h4>
                         </div>
                         <div class="contact-info mb--30">
                             <h4 class="title">Email</h4>
                             <p>Our support team will get back to within 48h during standard business hours.</p>
-                            <h4 class="phone-number"><a href="mailto:seytechagency@gmail.com">hello@seytech.com</a></h4>
+                            <h4 class="phone-number" style="font-size : 28px;"><a href="mailto:hello@seytech.com.ng">hello@seytech.com.ng</a></h4>
                         </div> 
                         <div>  </div>
                     </div>
@@ -364,6 +369,7 @@
 
     <!-- Site Scripts -->
     <script src="js/app.js"></script>
+    <script src="js/contact.js"></script>
 </body>
 
 
