--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
   gtag('config', 'G-K00L6EKK1D');
 </script>
 <title>Seytech | Web Design Agency in Nigeria</title>
-<meta name="description" content="Seytech is a professional Web development agency offering SEO, Digital marketing
-and Social Media services in Lagos, Nigeria. ">
+<meta name="description" content="Seytech is a Leading Digital Agency in Nigeria, with a 
+focus on Web Development, Logo and Branding, Design, 3d Animation, SEO and Digital Marketing.">
 <meta name="viewport" content="width=device-width,initial-scale=1.0 , shrink-to-fit=no">
 <meta name="robots" content="index,follow">
-
+<meta itemprop="image" content="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/evcwiflrzcog6u63wm6f">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://seytech.com.ng/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Seytech | Web Design Agency in Nigeria">
-  <meta property="og:description" content="Seytech is a professional Web development agency offering SEO, Digital marketing
-and Social Media services in Lagos, Nigeria. ">
-  <meta property="og:image" content="https://seytechimg.netlify.app/logo.png">
+  <meta property="og:description" content="Seytech is a Leading Digital Agency in Nigeria, with a 
+focus on Web Development, Logo and Branding, Design, 3d Animation, SEO and Digital Marketing. ">
+  <meta property="og:image" content="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/evcwiflrzcog6u63wm6f">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="seytech.com.ng">
   <meta property="twitter:url" content="https://seytech.com.ng/">
   <meta name="twitter:title" content="Seytech | Web Design Agency in Nigeria">
-  <meta name="twitter:description" content="Seytech is a professional Web development agency offering SEO, Digital marketing
-and Social Media services in Lagos, Nigeria. ">
-  <meta name="twitter:image" content="https://seytechimg.netlify.app/logo.png">
+  <meta name="twitter:description" content="Seytech is a Leading Digital Agency in Nigeria, with a 
+focus on Web Development, Logo and Branding, Design, 3d Animation, SEO and Digital Marketing. ">
+  <meta name="twitter:image" content="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/evcwiflrzcog6u63wm6f">
 
         
 
