--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ focus on Web Development, Logo and Branding, Design, 3d Animation, SEO and Digit
   <meta property="og:title" content="Seytech | Web Design Agency in Nigeria">
   <meta property="og:description" content="Seytech is a Leading Digital Agency in Nigeria, with a 
 focus on Web Development, Logo and Branding, Design, 3d Animation, SEO and Digital Marketing. ">
-  <meta property="og:image" content="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/evcwiflrzcog6u63wm6f">
+  <meta property="og:image" content="https://seytechimg.netlify.app/logo.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -34,7 +34,7 @@ focus on Web Development, Logo and Branding, Design, 3d Animation, SEO and Digit
   <meta name="twitter:title" content="Seytech | Web Design Agency in Nigeria">
   <meta name="twitter:description" content="Seytech is a Leading Digital Agency in Nigeria, with a 
 focus on Web Development, Logo and Branding, Design, 3d Animation, SEO and Digital Marketing. ">
-  <meta name="twitter:image" content="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/evcwiflrzcog6u63wm6f">
+  <meta name="twitter:image" content="https://seytechimg.netlify.app/logo.png">
 
         
 
