--- a/pricing-table.html
+++ b/pricing-table.html
@@ -185,7 +185,7 @@
         <!--=====================================-->
         <!--=        Pricing Area Start         =-->
         <!--=====================================-->
-        < <section class="section bg-color-light section-padding">
+         <section class="section bg-color-light section-padding">
             <div class="container">
                 <div class="section-heading mb-0">
                     <span class="subtitle">Pricing Plan</span>
