--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
 focus on Web Development, Logo and Branding, Design, 3d Animation, SEO and Digital Marketing.">
 <meta name="viewport" content="width=device-width,initial-scale=1.0 , shrink-to-fit=no">
 <meta name="robots" content="index,follow">
+
 <meta itemprop="image" content="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/evcwiflrzcog6u63wm6f">
 
   <!-- Facebook Meta Tags -->
+  <meta property="og:site_name" content="Seytech NG" >
   <meta property="og:url" content="https://seytech.com.ng/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Seytech | Web Design Agency in Nigeria">
-  <meta property="og:description" content="Seytech is a Leading Digital Agency in Nigeria, with a 
-focus on Web Development, Logo and Branding, Design, 3d Animation, SEO and Digital Marketing. ">
+  <meta property="og:description" content="Seytech is a professional Web development agency offering SEO, Digital marketing
+and Social Media services in Lagos, Nigeria. ">
   <meta property="og:image" content="https://seytechimg.netlify.app/logo.png">
 
   <!-- Twitter Meta Tags -->
@@ -32,8 +34,8 @@ focus on Web Development, Logo and Branding, Design, 3d Animation, SEO and Digit
   <meta property="twitter:domain" content="seytech.com.ng">
   <meta property="twitter:url" content="https://seytech.com.ng/">
   <meta name="twitter:title" content="Seytech | Web Design Agency in Nigeria">
-  <meta name="twitter:description" content="Seytech is a Leading Digital Agency in Nigeria, with a 
-focus on Web Development, Logo and Branding, Design, 3d Animation, SEO and Digital Marketing. ">
+  <meta name="twitter:description" content="Seytech is a professional Web development agency offering SEO, Digital marketing
+and Social Media services in Lagos, Nigeria. ">
   <meta name="twitter:image" content="https://seytechimg.netlify.app/logo.png">
 
         
