--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ focus on Web Development, Logo and Branding, Design, 3d Animation, SEO and Digit
 <meta itemprop="image" content="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/evcwiflrzcog6u63wm6f">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:site_name" content="Seytech NG" >
+  <meta property="og:site_name" content="SEYTECH NG" >
   <meta property="og:url" content="https://seytech.com.ng/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Seytech | Web Design Agency in Nigeria">
@@ -31,7 +31,7 @@ and Social Media services in Lagos, Nigeria. ">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="seytech.com.ng">
+  <meta property="twitter:domain" content="SEYTECH NG">
   <meta property="twitter:url" content="https://seytech.com.ng/">
   <meta name="twitter:title" content="Seytech | Web Design Agency in Nigeria">
   <meta name="twitter:description" content="Seytech is a professional Web development agency offering SEO, Digital marketing
